# dwm-changes

./: CMakeLists.txt  Makefile  README.md  buttons.c  config.h  drw.c  dwm.c  keys.c  maximize.c  rules.h
lib/: autostart.c
themes/: bluegrey.h  dracula.h  green.h  gruvbox.h  gruvchad.h  orange.h  otro.h  violet.h
